# hexagonal-rust

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  flake.nix
migrations/: 001_init.sql
src/: main.rs  observability.rs
src/adapters/inbound/http/: dtos.rs  errors.rs  handlers.rs  mod.rs
src/adapters/outbound/: mod.rs
src/adapters/outbound/payment/: client.rs
src/adapters/outbound/sqlite/: billing_repository.rs  mod.rs  plan_repository.rs  subscription_repository.rs
src/domain/: entities.rs  errors.rs  mod.rs  requests.rs  value_objects.rs
src/ports/: billing_profile_repository.rs  mod.rs  plan_repository.rs  subscription_repository.rs
src/services/: subscription_service.rs
