[package]
name = "hexagonal-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hexagonal-rust"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = { version = "0.14", features = ["trace", "grpc-tonic", "tls", "tls-roots"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tonic = "0.9"
